--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300;400;700&display=swap');
 
+
 .App {
-  text-align: center;
   font-family: 'Quicksand', 'Trebuchet MS', sans-serif;
+  color: white;
+  padding: 50px 100px;
 }
 
+.container {
+  padding: 20px !important;
+  border: gray 1px solid;
+  border-radius: 8px;
+}
+
+.footer-container {
+  border: none !important;
+  color: bisque;
+  text-align: center;
+}
