--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
 
 
 .App {
-  font-family: 'Quicksand', 'Trebuchet MS', sans-serif;
   color: white;
+  font-family: 'Quicksand', 'Trebuchet MS', sans-serif;
+  margin: 0 auto;
   padding: 50px 100px;
+  width: max-content;
 }
 
 .container {
